# Rust_Monitoring_App

./: README.md  coop-console.txt  package-lock.json  package.json  tsconfig.json  vite.config.ts
Generating test log file/: Launch.bat
src/: App.tsx  index.css
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: file_handler.rs  log_parser.rs  main.rs  main2.rs  models.rs  sys_monitor.rs
src-tauri/src/commands/: logs.rs  system.rs
src-tauri/src/models/: log_entry.rs  mod.rs  system_info.rs
src-tauri/src/monitoring/: file_monitor.rs  mod.rs
src-tauri/src/state/: logs.rs  mod.rs  system.rs
src-tauri/src/utils/: encoding.rs  hashing.rs  log_parser.rs  mod.rs
src/components/: FileSelector.tsx  GameSelector.tsx  LogViewer.tsx  ProcessTableModal.tsx  SortedLogs.tsx  SystemMonitor.tsx  ThemeProvider.tsx
