[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"



[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
encoding_rs = "0.8"
sysinfo = "0.29"
systemstat = "0.2"
nvml-wrapper = { version = "0.8", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4.0"
regex = "1"
crossterm = "0.29.0"
notify = "8.0.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.5.0", features = [] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-dialog = "2"
chrono = "0.4.41"
tokio-util = "0.7.15"
sha2 = "0.10.9"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"
